<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="active_cases">Active Cases</string>
    <string name="total_recoverd">Total Recoverd</string>
    <string name="total_deths">Total Deths</string>
    <string name="population">Population</string>
    <string name="country_name">Country Name</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="search">search</string>
    <string name="by_total_deaths">By Total Deaths</string>
    <string name="by_population">By Population</string>
    <string name="by_active_cases">By Active Cases</string>
    <string name="by_country">By Country</string>
    <string name="sort_data">Sort data</string>
    <string name="language">Language</string>
</resources>