<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="100"
        android:title="@string/sort_data"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_by_country"
                android:orderInCategory="200"
                android:title="@string/by_country"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_by_active_cases"
                android:orderInCategory="200"
                android:title="@string/by_active_cases"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_by_population"
                android:orderInCategory="200"
                android:title="@string/by_population"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_by_total_deaths"
                android:orderInCategory="200"
                android:title="@string/by_total_deaths"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>