<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="@drawable/roundimage"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activeCasesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ligh"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/active_cases"
            android:textColor="@color/darkblue"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/totalRecoverdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ligh"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/total_recoverd"
            android:textColor="@color/darkblue"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/totalDethTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ligh"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/DeathsImageView"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/total_deths"
            android:textColor="@color/darkblue"
            app:layout_constraintStart_toEndOf="@+id/DeathsImageView"
            app:layout_constraintTop_toTopOf="@+id/DeathsImageView" />

        <TextView
            android:id="@+id/populationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ligh"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/populationImageView"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/population"
            android:textColor="@color/darkblue"
            app:layout_constraintStart_toEndOf="@+id/populationImageView"
            app:layout_constraintTop_toTopOf="@+id/populationImageView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <ImageView
            android:id="@+id/flagImageView"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/country" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/country_name"
            android:textColor="@color/darkblue"
            app:layout_constraintStart_toEndOf="@+id/flagImageView"
            app:layout_constraintTop_toTopOf="@+id/flagImageView" />

        <TextView
            android:id="@+id/countryTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ligh"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/flagImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/populationImageView"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:srcCompat="@drawable/population" />

        <ImageView
            android:id="@+id/DeathsImageView"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/dead" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:srcCompat="@drawable/activecases" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/recovered" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>